--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Пример сайта с кликабельными словами</title>
 </head>
-<body>
+<body> Matveeva OS
 <h1><a href="index1.html">Пример ссылки №1</a></h1>
 <h2><li><a href="index2.html">Пример ссылки №2</a></li></h2>
 </body>
