--- a/index.html
+++ b/index.html
@@ -1,10 +1,61 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Пример сайта с кликабельными словами</title>
-</head>
-<body> Matveeva OS
-<h1><a href="index1.html">Пример ссылки №1</a></h1>
-<h2><li><a href="index2.html">Пример ссылки №2</a></li></h2>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head> <p align=center>
+
+<body>
+  <table align="center" bgcolor="pink" border="12">
+    <tr>
+      <td>ФИO</p></td>
+      <td>Возраст</td>
+      <td>Средний балл</td>
+    </tr>
+    <tr>
+      <td><ul><li>Балашова Анастасия Владимировна</li></ul></td>
+      <td>21</td>
+      <td>4,5</td>
+    </tr>
+    <tr>
+      <td><ul><li>Галенков Виталий Сергеевич</td>
+      <td>20</td>
+      <td>3,6</td>
+    </tr>
+    <tr>
+      <td><ul><li>Гачина Валерия Александровна</td>
+      <td>21</td>
+      <td>4,9</td>
+    </tr>
+    <tr>
+      <td><ul><li>Дубников Владислав Юрьевич</td>
+      <td>21</td>
+      <td>3,8</td>
+    </tr>
+    <tr>
+      <td><ul><li>Зайцева Дарья Анатольевна</td>
+      <td>21</td>
+      <td>4,3</td>
+    </tr>
+    <tr>
+      <td><ul><li>Калмыков Максим Дмитриевич</td>
+      <td>19</td>
+      <td>4,5</td>
+    </tr>
+    <tr>
+      <td><ul><li>Косичкина Виктория Витальевна</td>
+      <td>20</td>
+      <td>5,0</td>
+    </tr>
+    <tr>
+      <td> <ul><li><a href="https://github.com/matveevaos/olgait">Матвеева Ольга Сергеевна</<button></td>
+      <td>21</td>
+      <td>4,3</td>
+    </tr>
+
+  </table>
 </body>
 </html>
